fixes user photo
