# src/validation/registerUserValidation.js
@@ -7,4 +7,5 @@ export const registerUserValidationShema = Joi.object({
     Joi.string()
     .required()
     .pattern(new RegExp('^(?=.*[A-Za-z])(?=.*\\d)(?=.*[@$!%*?&])[A-Za-z\\d@$!%*?&]{8,20}$')),
+    theme: Joi.string().required().min(3).max(20).valid('dark', 'light', 'violet').default('light'),
 });
